Registration functionality added

--- a/dcrm/website/templates/home.html
+++ b/dcrm/website/templates/home.html
@@ -2,12 +2,38 @@
 
 {% block content %}
 
-<div class="col-md-6 offset-md-3">
 
 {% if user.is_authenticated %}
 
-<h1> user.is_authenticated </h1>
+<h1> Records </h1>
 
+<table class="table table-striped table-hover table-bordered">
+    <thead class="table-dark">
+        <tr>
+            <th scope="col">Name</th>
+            <th scope="col">Email</th>
+            <th scope="col">Date of Birth</th>
+            <th scope="col">Address</th>
+            <th scope="col">City</th>
+            <th scope="col">Phone</th>
+        </tr>
+    </thead>
+    <tbody>
+        <!--Getting the data from the database and displaying on website -->
+    {%if records %}
+        {%for record in records%}
+        <tr>
+            <td>{{ record.first_name }} {{ record.last_name }}</td>           
+            <td>{{ record.email }}</td>
+            <td>{{ record.dob }}</td>
+            <td>{{ record.address }}</td>
+            <td>{{ record.city }}</td>
+            <td>{{ record.phone }}</td>
+        </tr>
+        {% endfor %}
+    {% endif %}
+    </tbody>
+</table>
 {% else %}
     <h1>Login</h1>
 
@@ -22,7 +48,6 @@
             <button type="submit" class="btn btn-secondary">Login</button>
     </form>
 
-</div>
 {% endif %}
 
 {% endblock %}
